[gd_scene load_steps=20 format=2]

[ext_resource path="res://Games/Welding/WeldingGunSparks.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Fonts/Corben-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Corben-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Games/Welding/WeldingRoot.gd" type="Script" id=4]
[ext_resource path="res://UnfinishedGames/Precision_Machining/UI_MetalSheetUncut.png" type="Texture" id=5]
[ext_resource path="res://Games/Welding/UI_CutMetalSheetHalfLeft02-removebg-preview.png" type="Texture" id=6]
[ext_resource path="res://Games/Welding/UI_CutMetalSheetHalfRight03-removebg-preview.png" type="Texture" id=7]
[ext_resource path="res://Games/Welding/UI_CutMetalSheetHalfRight01-removebg-preview.png" type="Texture" id=8]
[ext_resource path="res://Games/Welding/UI_CutMetalSheetHalfLeft03-removebg-preview.png" type="Texture" id=9]
[ext_resource path="res://Games/Welding/UI_CutMetalSheetHalfLeft01-removebg-preview.png" type="Texture" id=10]
[ext_resource path="res://Games/Welding/UI_CutMetalSheetHalfRight02-removebg-preview.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.286275, 0.270588, 0.258824, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0705882, 0.0431373, 0.0235294, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.329412, 0.329412, 0.329412, 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 0.34375, 0.34375, 0.34375, 1, 0.839844, 0.160751, 0.160751, 1 )

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 1, 0.47168, 0, 1, 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 0, 0, 1 )

[node name="WeldingRoot" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="ScreenArea" type="MarginContainer" parent="."]
margin_left = 200.0
margin_right = 1500.0
margin_bottom = 675.0

[node name="Backround" type="Panel" parent="ScreenArea"]
margin_right = 1300.0
margin_bottom = 675.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="ScreenArea"]
margin_right = 1300.0
margin_bottom = 675.0
custom_constants/margin_right = 400
custom_constants/margin_top = 30
custom_constants/margin_left = 400
custom_constants/margin_bottom = 30

[node name="Table" type="Panel" parent="ScreenArea/MarginContainer"]
margin_left = 400.0
margin_top = 30.0
margin_right = 900.0
margin_bottom = 645.0
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer2" type="MarginContainer" parent="ScreenArea/MarginContainer"]
margin_left = 400.0
margin_top = 30.0
margin_right = 900.0
margin_bottom = 645.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="Sheet" type="Panel" parent="ScreenArea/MarginContainer/MarginContainer2"]
visible = false
margin_left = 50.0
margin_top = 50.0
margin_right = 450.0
margin_bottom = 565.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="TextMarginContainer" type="MarginContainer" parent="."]
margin_left = 200.0
margin_right = 600.0
margin_bottom = 675.0
custom_constants/margin_right = 25
custom_constants/margin_top = 150
custom_constants/margin_left = 25

[node name="VBoxContainer" type="VBoxContainer" parent="TextMarginContainer"]
margin_left = 25.0
margin_top = 150.0
margin_right = 375.0
margin_bottom = 675.0
custom_constants/separation = 50

[node name="Title" type="Label" parent="TextMarginContainer/VBoxContainer"]
margin_right = 350.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 4 )
text = "Welding"
align = 1

[node name="Instructions" type="Label" parent="TextMarginContainer/VBoxContainer"]
margin_top = 96.0
margin_right = 350.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 5 )
text = "Select the shape that you need and then weld together the two sheets of metal"
align = 1
autowrap = true

[node name="ButtonsMargin" type="MarginContainer" parent="."]
margin_right = 1500.0
margin_bottom = 675.0
custom_constants/margin_right = 185
custom_constants/margin_top = 50
custom_constants/margin_left = 1135
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsMargin"]
margin_left = 1135.0
margin_top = 50.0
margin_right = 1315.0
margin_bottom = 625.0
custom_constants/separation = 30

[node name="CurvyButton" type="Button" parent="ButtonsMargin/VBoxContainer"]
margin_right = 180.0
margin_bottom = 272.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ButtonsMargin/VBoxContainer/CurvyButton"]
margin_left = -31.0
margin_top = 8.0
margin_right = 193.0
margin_bottom = 494.0
rect_scale = Vector2( 0.872, 0.529 )
texture = ExtResource( 7 )

[node name="MountainyButton" type="Button" parent="ButtonsMargin/VBoxContainer"]
margin_top = 302.0
margin_right = 180.0
margin_bottom = 575.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon_align = 1

[node name="TextureRect" type="TextureRect" parent="ButtonsMargin/VBoxContainer/MountainyButton"]
margin_left = -23.0
margin_top = 8.0
margin_right = 201.0
margin_bottom = 494.0
rect_scale = Vector2( 0.872, 0.529 )
texture = ExtResource( 11 )

[node name="RightButtonMargin" type="MarginContainer" parent="."]
margin_right = 1500.0
margin_bottom = 675.0
mouse_filter = 2
custom_constants/margin_right = 30
custom_constants/margin_top = 200
custom_constants/margin_left = 1350
custom_constants/margin_bottom = 202

[node name="WavyButton" type="Button" parent="RightButtonMargin"]
margin_left = 1350.0
margin_top = 200.0
margin_right = 1470.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="RightButtonMargin/WavyButton"]
margin_left = -86.0
margin_top = 6.0
margin_right = 1084.0
margin_bottom = 2538.0
rect_scale = Vector2( 0.872, 0.529 )
texture = ExtResource( 8 )

[node name="WavyMetalPiece" type="TextureRect" parent="."]
visible = false
margin_left = 664.0
margin_top = 96.0
margin_right = 888.0
margin_bottom = 583.0
rect_scale = Vector2( 1.65, 1 )
texture = ExtResource( 10 )

[node name="CurvyMetalPiece" type="TextureRect" parent="."]
visible = false
margin_left = 664.0
margin_top = 96.0
margin_right = 888.0
margin_bottom = 582.0
rect_scale = Vector2( 1.65, 1 )
texture = ExtResource( 9 )

[node name="MountainyMetalPiece" type="TextureRect" parent="."]
visible = false
margin_left = 664.0
margin_top = 96.0
margin_right = 888.0
margin_bottom = 582.0
rect_scale = Vector2( 1.65, 1 )
texture = ExtResource( 6 )

[node name="RightWavyMetalPiece" type="TextureRect" parent="."]
visible = false
margin_left = 669.0
margin_top = 96.0
margin_right = 893.0
margin_bottom = 582.0
rect_scale = Vector2( 1.65, 1 )
texture = ExtResource( 8 )

[node name="RightCurvyMetalPiece" type="TextureRect" parent="."]
visible = false
margin_left = 675.0
margin_top = 96.0
margin_right = 899.0
margin_bottom = 582.0
rect_scale = Vector2( 1.65, 1 )
texture = ExtResource( 7 )

[node name="RightMountainyMetaPiece" type="TextureRect" parent="."]
visible = false
margin_left = 669.0
margin_top = 96.0
margin_right = 893.0
margin_bottom = 582.0
rect_scale = Vector2( 1.65, 1 )
texture = ExtResource( 11 )

[node name="WavyGuideline" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 1040, 96, 984, 128, 928, 168, 888, 208, 864, 240, 848, 272, 848, 288, 856, 312, 880, 344, 896, 360, 904, 376, 912, 392, 912, 416, 896, 448, 872, 480, 872, 496, 872, 520, 888, 544, 904, 560, 936, 584 )

[node name="CurvyGuideline" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 912, 96, 904, 112, 888, 128, 840, 152, 800, 176, 768, 208, 760, 224, 768, 248, 784, 264, 840, 304, 872, 328, 888, 352, 888, 368, 880, 392, 856, 416, 816, 440, 792, 456, 776, 480, 768, 504, 768, 536, 792, 568, 808, 584 )

[node name="MountainyGuideline" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 856, 96, 752, 216, 736, 240, 736, 256, 744, 280, 760, 304, 968, 456, 976, 464, 984, 472, 984, 480, 880, 584 )

[node name="WeldingLine" type="Line2D" parent="."]
width = 14.0
default_color = Color( 1, 0, 0, 1 )
gradient = SubResource( 6 )

[node name="Tween" type="Tween" parent="."]

[node name="WeldingGun" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.15624, 0.15624 )
frames = ExtResource( 1 )
animation = "Normal"

[node name="Particles" type="CPUParticles2D" parent="."]
scale = Vector2( 0.15624, 0.15624 )
emitting = false
amount = 50
lifetime = 0.7
randomness = 1.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 500.0
initial_velocity_random = 0.5
linear_accel = 700.0
damping = 20.0
angle_random = 1.0
scale_amount = 10.0
scale_amount_random = 0.5
color = Color( 0.960784, 1, 0.278431, 1 )
color_ramp = SubResource( 8 )

[node name="ShinyTexture" type="TextureRect" parent="."]
margin_left = 616.0
margin_top = -432.0
margin_right = 1786.0
margin_bottom = 2100.0
rect_scale = Vector2( 0.401421, 0.595201 )
texture = ExtResource( 5 )

[node name="FadeOverlay" type="Panel" parent="."]
visible = false
margin_left = 200.0
margin_right = 1500.0
margin_bottom = 675.0
custom_styles/panel = SubResource( 7 )

[connection signal="pressed" from="ButtonsMargin/VBoxContainer/CurvyButton" to="." method="_on_CurvyButton_pressed"]
[connection signal="pressed" from="ButtonsMargin/VBoxContainer/MountainyButton" to="." method="_on_MountainyButton_pressed"]
[connection signal="pressed" from="RightButtonMargin/WavyButton" to="." method="_on_WavyButton_pressed"]
